--- a/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
@@ -30,10 +30,11 @@
         android:max="20"
         android:layout_marginStart="56dp"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="57dp"
+        android:layout_marginTop="55dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="56dp" />
 
     <TextView
         android:id="@+id/textViewUrl"
