--- a/App/DrapeauApp/app/src/main/res/layout/row_list_results.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/row_list_results.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewFlag"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         app:srcCompat="@mipmap/ic_launcher" />
@@ -29,7 +29,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textEvent"
+            android:id="@+id/textViewRepondeUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -37,7 +37,7 @@
             tools:text="evenement" />
 
         <TextView
-            android:id="@+id/textJoueur"
+            android:id="@+id/textViewCorrectAnswer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/darker_gray"
