--- a/App/DrapeauApp/app/src/main/res/layout/row_list_results.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/row_list_results.xml
@@ -29,7 +29,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textViewRepondeUser"
+            android:id="@+id/textViewReponseUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
