--- a/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
@@ -104,7 +104,8 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:max="10"/>
         </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
