--- a/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Quitter" />
+
+            <Button
+                android:id="@+id/buttonPageResultat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 
