--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -76,8 +76,10 @@
                 android:id="@+id/progressBarQuizzTexte"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:max="10"/>
+                android:layout_height="44dp"
+                android:max="10"
+                android:maxHeight="20dp"
+                android:minHeight="10dp" />
         </LinearLayout>
 
         <LinearLayout
