--- a/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
@@ -106,9 +106,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="61dp"
                 android:layout_weight="1"
-                android:max="10"
-                android:maxHeight="20dp"
-                android:minHeight="179dp" />
+                android:max="10"/>
+
         </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
