--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -77,9 +77,7 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
-                android:max="10"
-                android:maxHeight="20dp"
-                android:minHeight="10dp" />
+                android:max="10" />
         </LinearLayout>
 
         <LinearLayout
