--- a/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
@@ -102,11 +102,11 @@
 
             <ProgressBar
                 android:id="@+id/progressBarQuizzImage"
-                style="?android:attr/progressBarStyleHorizontal"
+                style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="61dp"
+                android:layout_height="20dp"
                 android:layout_weight="1"
-                android:max="10"/>
+                android:max="10" />
 
         </LinearLayout>
 
