--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -74,9 +74,9 @@
 
             <ProgressBar
                 android:id="@+id/progressBarQuizzTexte"
-                style="?android:attr/progressBarStyleHorizontal"
+                style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
+                android:layout_height="20dp"
                 android:max="10" />
         </LinearLayout>
 
