--- a/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
@@ -12,13 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="28dp"
-        android:width="350dp"
+        android:layout_marginTop="26dp"
+        android:width="300dp"
         android:height="35dp"
         android:background="@color/colorAccent"
+        android:text="TextView"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
-        android:textSize="18sp" />
+        android:textSize="24sp" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/ConstraintLayoutQuizzImageFragment"
@@ -96,7 +97,7 @@
             android:layout_height="193dp"
             android:layout_marginEnd="22dp"
             android:layout_marginStart="22dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
