Button quitter dans le main activity suppression de la liste fixe dans le resultat activity action du button recommencer dans le meme activity

--- a/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
                 android:text="Commencer" />
 
             <Button
-                android:id="@+id/buttonQuitterMainActivity"
+                android:id="@+id/buttonQuitterApp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Quitter" />
