--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -12,8 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:layout_marginTop="16dp" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayoutQuizzTexteFragment"
@@ -26,9 +25,25 @@
         tools:layout_editor_absoluteY="140dp">
 
         <LinearLayout
+            android:id="@+id/linearLayoutQuizzTexteFragmentDeux"
+            android:layout_width="358dp"
+            android:layout_height="153dp"
+            android:layout_marginEnd="13dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="250dp"
+            android:orientation="horizontal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintTop_creator="1"
+            tools:layout_editor_absoluteY="257dp"></LinearLayout>
+
+        <LinearLayout
             android:id="@+id/linearLayoutQuizzTexteFragment"
-            android:layout_width="371dp"
-            android:layout_height="222dp"
+            android:layout_width="360dp"
+            android:layout_height="236dp"
             android:layout_marginBottom="115dp"
             android:layout_marginEnd="12dp"
             android:layout_marginStart="12dp"
@@ -36,6 +51,7 @@
             android:orientation="vertical"
             android:weightSum="1"
             app:layout_constraintBottom_toBottomOf="@+id/linearLayoutQuizzTexteFragmentDeux"
+            app:layout_constraintHorizontal_bias="0.571"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -49,52 +65,34 @@
                 android:id="@+id/buttonQuizzTexteUn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button"
                 android:textColor="@android:color/white" />
 
             <Button
                 android:id="@+id/buttonQuizzTexteDeux"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button"
                 android:textColor="@android:color/white" />
 
             <Button
                 android:id="@+id/buttonQuizzTexteTrois"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button"
                 android:textColor="@android:color/white" />
 
             <Button
                 android:id="@+id/buttonQuizzTexteQuatre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:layout_marginBottom="2dp" />
 
             <ProgressBar
                 android:id="@+id/progressBarQuizzTexte"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
+                android:layout_marginTop="5dp"
                 android:max="10" />
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayoutQuizzTexteFragmentDeux"
-            android:layout_width="366dp"
-            android:layout_height="160dp"
-            android:layout_marginEnd="13dp"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="250dp"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_editor_absoluteY="290dp"></LinearLayout>
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
