--- a/App/DrapeauApp/app/src/main/res/values/styles.xml
+++ b/App/DrapeauApp/app/src/main/res/values/styles.xml
@@ -1,13 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="@android:style/Theme.Light">
+    <style name="AppTheme" parent="@android:style/Theme.Light.NoTitleBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/colorPrimary</item>
+        <item name="android:background">#FEFEE2</item>
+        <item name="android:colorBackground">#FEFEE2</item>
     </style>
-
 
 
 
