--- a/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
@@ -7,6 +7,15 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="17dp"
+        android:text="TextView" />
+
+    <TextView
         android:id="@+id/textViewQuizzImageFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
