--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -25,22 +25,6 @@
         tools:layout_editor_absoluteY="140dp">
 
         <LinearLayout
-            android:id="@+id/linearLayoutQuizzTexteFragmentDeux"
-            android:layout_width="358dp"
-            android:layout_height="153dp"
-            android:layout_marginEnd="13dp"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="250dp"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_editor_absoluteY="257dp"></LinearLayout>
-
-        <LinearLayout
             android:id="@+id/linearLayoutQuizzTexteFragment"
             android:layout_width="360dp"
             android:layout_height="236dp"
@@ -85,14 +69,49 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutQuizzTexteFragmentDeux"
+            android:layout_width="358dp"
+            android:layout_height="153dp"
+            android:layout_marginEnd="13dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="273dp"
+            android:orientation="horizontal"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintTop_creator="1">
+
             <ProgressBar
                 android:id="@+id/progressBarQuizzTexte"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_marginTop="5dp"
+                android:layout_weight="1"
                 android:max="10" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="108dp"
+                android:layout_height="wrap_content"
+                android:text="temps restant" />
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="14dp"
+        android:layout_toStartOf="@+id/imageViewQuizzTexteFragment"
+        android:text="question " />
 
 </RelativeLayout>
