--- a/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_texte_fragment.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/buttonQuizzTexteUn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/white" />
+                android:textColor="@color/windowsBackground" />
 
             <Button
                 android:id="@+id/buttonQuizzTexteDeux"
