--- a/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
@@ -28,22 +28,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="11dp"
-        android:layout_marginTop="6dp"
-        app:layout_constraintLeft_toLeftOf="@+id/touchTextView"
-        app:layout_constraintTop_toTopOf="@+id/touchTextView"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"/>
+        tools:layout_constraintTop_creator="1"
+        tools:layout_editor_absoluteY="394dp"
+        tools:layout_editor_absoluteX="168dp" />
 
-    <TextView
-        android:id="@+id/touchTextView"
-        android:layout_width="71dp"
-        android:layout_height="62dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView"
-        app:layout_constraintRight_toRightOf="@+id/imageView"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+    <ImageView
+        android:id="@+id/imageViewTouchMe"
+        android:layout_width="120dp"
+        android:layout_height="82dp"
+        app:srcCompat="@drawable/touchme"
+        tools:layout_editor_absoluteX="137dp"
+        tools:layout_editor_absoluteY="378dp" />
+
 </android.support.constraint.ConstraintLayout>
 
