--- a/App/DrapeauApp/app/src/main/res/layout/activity_resultat.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_resultat.xml
@@ -5,7 +5,7 @@
     android:id="@+id/relativeLayoutActivityResultat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray">
+    android:background="@color/windowsBackground">
 
     <Button
         android:id="@+id/buttonRecommencer"
@@ -15,6 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="44dp"
         android:layout_marginTop="18dp"
+        android:background="#2D7396"
         android:text="Recommencer"
         android:textColor="@android:color/white" />
 
@@ -26,6 +27,7 @@
         android:layout_alignBottom="@+id/buttonRecommencer"
         android:layout_marginStart="51dp"
         android:layout_toEndOf="@+id/buttonRecommencer"
+        android:background="#2D7396"
         android:text="Retour au menu"
         android:textColor="@android:color/white" />
 
@@ -60,6 +62,7 @@
             android:layout_marginEnd="1dp"
             android:layout_marginStart="1dp"
             android:orientation="horizontal"
+            android:weightSum="1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewScoreActivityResultat"
@@ -70,7 +73,9 @@
             <ListView
                 android:id="@+id/listViewActivityResultat"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="444dp"
+                android:layout_weight="1"
+                android:background="@color/windowsBackground" />
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 
