--- a/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
@@ -24,9 +24,9 @@
         android:layout_marginTop="26dp"
         android:width="300dp"
         android:height="35dp"
-        android:background="@color/colorAccent"
+        android:background="#2D7396"
         android:textAlignment="center"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/windowsBackground"
         android:textSize="24sp" />
 
     <android.support.constraint.ConstraintLayout
