--- a/App/DrapeauApp/app/src/main/res/values/colors.xml
+++ b/App/DrapeauApp/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#2D7396</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#a4a8ab</color>
+    <color name="navigationBarColor">#2D7396</color>
     <color name="windowsBackground">#fefee2</color>
+    <color name="androidButton">#2D7396</color>
+    <color name="progressBar">#2D7396</color>
 </resources>
