--- a/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
@@ -27,19 +27,27 @@
         android:id="@+id/progressBarMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_marginStart="66dp"
         tools:layout_constraintTop_creator="1"
-        tools:layout_editor_absoluteY="394dp"
-        tools:layout_editor_absoluteX="168dp" />
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginEnd="64dp"
+        app:layout_constraintRight_toRightOf="@+id/imageViewTouchMe"
+        android:layout_marginTop="12dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageViewTouchMe" />
 
     <ImageView
         android:id="@+id/imageViewTouchMe"
-        android:layout_width="120dp"
-        android:layout_height="82dp"
+        android:layout_width="192dp"
+        android:layout_height="149dp"
         app:srcCompat="@drawable/touchme"
-        tools:layout_editor_absoluteX="137dp"
-        tools:layout_editor_absoluteY="378dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="13dp"
+        app:layout_constraintRight_toRightOf="@+id/imageView"
+        android:layout_marginBottom="36dp" />
 
 </android.support.constraint.ConstraintLayout>
 
