--- a/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/RelativeLayoutQuizzImageFragment"
+    android:id="@+id/constraintLayoutQuizzImageFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,8 +12,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textViewQuizzImageFragment"
@@ -21,116 +29,113 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
         android:width="300dp"
         android:height="35dp"
         android:background="#2D7396"
         android:textAlignment="center"
         android:textColor="@color/windowsBackground"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/imageButtonQuizzImageUne"
+        android:layout_marginEnd="35dp"
+        app:layout_constraintRight_toRightOf="@+id/imageButtonQuizzImageDeux"
+        android:layout_marginBottom="53dp" />
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/ConstraintLayoutQuizzImageFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/textViewQuizzImageFragment"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp">
+    <ImageButton
+        android:id="@+id/imageButtonQuizzImageDeux"
+        android:layout_width="180dp"
+        android:layout_height="104dp"
+        android:layout_weight="0.66"
+        android:background="@android:color/transparent"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/imageButtonQuizzImageQuatre"
+        app:layout_constraintRight_toRightOf="@+id/textViewTimer"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="18dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageButtonQuizzImageQuatre"
+        app:layout_constraintHorizontal_bias="0.0" />
 
-        <LinearLayout
-            android:id="@+id/linearLayoutQuizzImageUne"
-            android:layout_width="337dp"
-            android:layout_height="100dp"
-            android:layout_marginEnd="27dp"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_editor_absoluteX="23dp"
-            tools:layout_editor_absoluteY="10dp">
+    <ImageButton
+        android:id="@+id/imageButtonQuizzImageUne"
+        android:layout_width="182dp"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="40dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonQuizzImageDeux"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonQuizzImageDeux" />
 
-            <ImageButton
-                android:id="@+id/imageButtonQuizzImageUne"
-                android:layout_width="141dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.17"
-                android:background="@android:color/transparent" />
+    <ImageButton
+        android:id="@+id/imageButtonQuizzImageTrois"
+        android:layout_width="0dp"
+        android:layout_height="110dp"
+        android:layout_weight="1.20"
+        android:background="@android:color/transparent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/imageButtonQuizzImageUne"
+        android:layout_marginTop="326dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/imageButtonQuizzImageUne"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
-                android:id="@+id/imageButtonQuizzImageDeux"
-                android:layout_width="162dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.05"
-                android:background="@android:color/transparent" />
-        </LinearLayout>
+    <ImageButton
+        android:id="@+id/imageButtonQuizzImageQuatre"
+        android:layout_width="180dp"
+        android:layout_height="0dp"
+        android:layout_weight="1.17"
+        android:background="@android:color/transparent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonQuizzImageTrois"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonQuizzImageTrois"
+        app:layout_constraintLeft_toRightOf="@+id/imageButtonQuizzImageTrois" />
 
-        <LinearLayout
-            android:id="@+id/linearLayoutQuizzImageDeux"
-            android:layout_width="337dp"
-            android:layout_height="100dp"
-            android:layout_marginEnd="27dp"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="88dp"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/linearLayoutQuizzImageUne"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1">
+    <ProgressBar
+        android:id="@+id/progressBarQuizzImage"
+        style="@style/CustomProgressBarHorizontal"
+        android:layout_width="254dp"
+        android:layout_height="20dp"
+        android:layout_weight="2.70"
+        android:max="10"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="52dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewTimer"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textViewTimer"
+        android:layout_marginLeft="76dp"
+        app:layout_constraintVertical_bias="0.0" />
 
-            <ImageButton
-                android:id="@+id/imageButtonQuizzImageTrois"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.20"
-                android:background="@android:color/transparent" />
+    <TextView
+        android:id="@+id/textViewTimer"
+        android:layout_width="50dp"
+        android:layout_height="22dp"
+        android:layout_weight="0.85"
+        android:text="10"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="295dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="297dp"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonQuizzImageDeux"
+        app:layout_constraintLeft_toRightOf="@+id/progressBarQuizzImage"
+        android:layout_marginLeft="52dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/imageButtonQuizzImageQuatre" />
 
-            <ImageButton
-                android:id="@+id/imageButtonQuizzImageQuatre"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.17"
-                android:background="@android:color/transparent" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayoutQuizzImageTrois"
-            android:layout_width="336dp"
-            android:layout_height="193dp"
-            android:layout_marginEnd="22dp"
-            android:layout_marginStart="22dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayoutQuizzImageDeux"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_editor_absoluteX="21dp">
-
-            <ProgressBar
-                android:id="@+id/progressBarQuizzImage"
-                style="@style/CustomProgressBarHorizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_weight="1.28"
-                android:max="10" />
-
-            <TextView
-                android:id="@+id/textViewTimer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.85"/>
-
-        </LinearLayout>
-
-    </android.support.constraint.ConstraintLayout>
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
