modif de la font checked

--- a/App/DrapeauApp/app/src/main/res/values/styles.xml
+++ b/App/DrapeauApp/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/windowsBackground</item>
         <item name="android:textColorPrimary">@color/windowsBackground</item>
-
+        <item name="android:typeface">serif</item>
         <item name="android:progressBarStyleHorizontal">@drawable/custom_progress_bar_horizontal</item>
 
 
